# Dashboards_python

./: README.MD  README.md  dashboards.py  pyproject.toml  requirements.txt
Supermarket Sales/: dashboards.py
